--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Profile</button>
-            <button>Contact</button>
+            <a href="./404.html"><button class="home">Home</button></a>
+            <a href="./404.html"><button class="Profile">Profile</button></a>
+            <a href="./404.html"><button class="Contact">Contact</button></a>
         </nav>
 
         <div class="header-main-text">
 
-        <h1>A brand and product<br> designer working with<br> clients globally</h1>
+           <h1>A brand and product<br> designer working with<br> clients globally</h1>
          
-        <button class="expertise">Expertise</button>
-        <button>Branding </button>
-        <button>Product</button>
-        <button> Design System</button>
+           <a href=""><button id="expertise">Expertise</button></a>
+           <a href="./404.html"><button>Branding </button></a>
+           <a href="./404.html"><button>Product</button></a>
+           <a href="./404.html"><button> Design System</button></a>
         </div>
     </header>
     <main>
@@ -37,16 +37,19 @@
     </main>
     <footer>
         <h2>Let's work together.
-           <a href=""> Get in touch.</a>
+            <br>
+           <a href="./404.html" class="get"> Get in touch.</a>
         </h2>
 
         <div class="social-contact">
-            <img src="./images/footer-logo.jpg" alt="">
-            <p>© Oli Harris 2023</p>
+            <div class="social-logo">
+                <img src="./images/footer-logo.jpg" alt="">
+                <p>© Oli Harris 2023</p>
+            </div>
             <div class="social-links">
-                <a href="">Twitter</a>
-                <a href="">Linkedin</a>
-                <a href="">Mail</a>
+                <a href="./404.html">Twitter</a>
+                <a href="./404.html">Linkedin</a>
+                <a href="./404.html">Mail</a>
             </div>
         </div>
     </footer>
