--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
            <h1>A brand and product<br> designer working with<br> clients globally</h1>
          
-           <a href=""><button id="expertise">Expertise</button></a>
+           <a href="./404.html"><button id="expertise">Expertise</button></a>
            <a href="./404.html"><button>Branding </button></a>
            <a href="./404.html"><button>Product</button></a>
            <a href="./404.html"><button> Design System</button></a>
