--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="./404.html"><button class="Profile">Profile</button></a>
             <a href="./404.html"><button class="Contact">Contact</button></a>
         </nav>
-
+        <div class="divider"></div>
         <div class="header-main-text">
 
            <h1>A brand and product<br> designer working with<br> clients globally</h1>
@@ -23,6 +23,13 @@
            <a href="./404.html"><button>Branding </button></a>
            <a href="./404.html"><button>Product</button></a>
            <a href="./404.html"><button> Design System</button></a>
+        </div>
+
+        <div class="shop">
+            <div class="shopIcon">
+                <img src="./images/oh.studio Icon.jpg" alt="">
+            </div>
+            <span>Shop</span>
         </div>
     </header>
     <main>
