completed desktop and mobile view

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </header>
     <main>
         <div class="imgContainer">
-            <div class="imgDivs"><img src="./images/img1 (4).jpg" alt=""></div>
-            <div class="imgDivs"><img src="./images/img1 (3).jpg" alt=""></div>
-            <div class="imgDivs"><img src="./images/img1 (1).jpg" alt=""></div>
-            <div class="imgDivs"><img src="./images/img1 (2).jpg" alt=""></div>
-            <div class="imgDivs"><img src="./images/img1 (5).jpg" alt=""></div>
-            <div class="imgDivs"><img src="./images/img1 (6).jpg" alt=""></div>
+            <div class="imgDivs"><img src="./images/img1 (4).jpg" alt=""><p class="nameTags">Aire</p></div>
+            <div class="imgDivs"><img src="./images/img1 (3).jpg" alt=""><p class="nameTags">Correlated</p></div>
+            <div class="imgDivs"><img src="./images/img1 (1).jpg" alt=""><p class="nameTags">Channel 5</p></div>
+            <div class="imgDivs"><img src="./images/img1 (2).jpg" alt=""><p class="nameTags">Ronsld Abram</p></div>
+            <div class="imgDivs"><img src="./images/img1 (5).jpg" alt=""><p class="nameTags">Propeller</p></div>
+            <div class="imgDivs"><img src="./images/img1 (6).jpg" alt=""><p class="nameTags">Schuh</p></div>
         </div>
     </main>
     <footer>
