--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="divider"></div>
         <div class="header-main-text">
 
-           <h1>A brand and product<br> designer working with<br> clients globally</h1>
+           <h1>A brand and product<br > designer working with<br class="breakponitmobile"> clients <br class="breakponitTAb"> globally</h1>
          
            <a href="./404.html"><button id="expertise">Expertise</button></a>
            <a href="./404.html"><button>Branding </button></a>
